tests/machine/x/cobol/record_assign.cob
*> Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. RECORD-ASSIGN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 FN-INC-RES PIC 9 VALUE 0.
       01 C.
           05 N PIC 9 VALUE 0.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       PERFORM FN_INC USING C
       FN-INC-RES
       DISPLAY N
       STOP RUN.
       
       FN_INC.
           PROCEDURE DIVISION USING C.
               COMPUTE C-N = N + 1
               EXIT.
